Salad shape refined - DONE!!!
English translation refined (thanks to Ledyanaya Sonya) - DONE!!!
Japanese translation refined (thanks to Macoto_Hino)
Bottles no longer disappear in grass (thanks to SpearAndFang)- DONE!!!
Mushrooms boil in 0.5 L instead of 1 L - DONE!!!
You can actually make pickled More Animals eggs - DONE!!!
Sunflower grain + honey makes Gozinaki, not sunflower candy - DONE!!!

1.5.5
Olive oil added
Pickled eggs & boiled eggs can be used interchangeably
Patches now use addEach function; load times improved
Saucepan & mixing bowl capacity nerfed; only holds 3 L of liquid
Simplified cauldron/saucepan models
New holding animation added
Changed mixing bowl to match saucepan model
Saucepan recipe changed again
Mushrooms in sushi are appropriately deadly 
Veggie juicing error corrected
Bushmeat in meals has proper textures

1.5.4
Added Dehydrated Berries, made by breaking up berry mash; usable in everything dried berries can be used for (may turn into fruit leather instead of dried berries later)
More Animals Compatibility added (Boiled/pickled egg variants added)
Chopped food perish timers reviewed; now match base food timers
Dried fruit perish timers updated
Recipes completely re-factored
Smashed meat can be added to soup & scrambled eggs
Boiled eggs can be added to dumplings
Saucepan clayforming recipe updated 
Cauldron/saucepan holding animations updated 
Deluxe fried veggies given proper names 
Japanese translation updated 

1.5.3
Updated to VS 1.16!!
Cooked mushrooms added
Mushrooms variants added to sushi
Mushroom visuals added for stuffed pepper
Wildcraft berries visible in stuffed bellpeppers
Soup mushroom visuals fixed
Soup veggie liquid textures made transparent
Fruit tree yogurt nutrition fixed
Dried seaweed oven visuals fixed 
Some items rotate in the GUI now
DisplayTransforms reviewed
Breadfruit buffed for 1.17 (enjoy)
Soybean items explain how to cook them

1.5.3-pre.11
New Chopped Mushroom ite
Old chopped mushroom models reworked