@@ -21,7 +21,6 @@
       		"game:flour-cassava" : { saturation: 140, foodcategory: "Grain" },
       		"game:flour-amaranth" : { saturation: 140, foodcategory: "Grain" },
       		"game:flour-sunflower" : { saturation: 140, foodcategory: "Grain" },
-			"game:egg-chicken-raw": { saturation: 150, foodcategory: "Protein"},
       		"game:honeyportion" : { saturation: 4, foodcategory: "Fruit" },
       		"expandedfoods:fruitsyrupportion-saguaro" : { saturation: 12, "health": 0.2, foodcategory: "Fruit" }, 
       		"expandedfoods:fruitsyrupportion-*" : { saturation: 12, "health": 0.1, foodcategory: "Fruit" },
