@@ -30,7 +30,10 @@
 				"game:flour-amaranth": {saturation: 140, foodcategory: "Grain"},
 				"game:flour-sunflower": {saturation: 140, foodcategory: "Grain"},
       			"acorns:flour-acorn" : { saturation: 140, foodcategory: "Grain" },
-				"game:egg-chicken-raw": { saturation: 150, foodcategory: "Protein"},
+				"expandedfoods:eggyolkfullportion-chicken": { saturation: 20, foodcategory: "Protein"},
+				"expandedfoods:eggyolkfullportion-pheasant": { saturation: 28, foodcategory: "Protein"},
+				"expandedfoods:eggyolkfullportion-goldenpheasant": { saturation: 28, foodcategory: "Protein"},
+				"expandedfoods:eggyolkfullportion-capercaillie": { saturation: 28, foodcategory: "Protein"},
       			"expandedfoods:foodoilportion-*" : { saturation: 6, "health": 0.1, foodcategory: "Vegetable" }, 
 				},
 			},
