@@ -3,7 +3,7 @@
   code: "water1",
   sealHours: 240,
   ingredients: [
-    { type: "item", code: "waterportion",  litres: 1 }
+    { type: "item", code: "waterportion",  litres: 10 }
   ],
   output: { type: "item", code: "salt", stackSize: 1 }
 },
@@ -11,7 +11,7 @@
   code: "water2",
   sealHours: 120,
   ingredients: [
-    { type: "item", code: "brineportion",  litres: 1 }
+    { type: "item", code: "brineportion",  litres: 10 }
   ],
   output: { type: "item", code: "salt", stackSize: 1 }
 },
